--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-sign-up></app-sign-up>
-<app-sign-in></app-sign-in>
-<app-user-list></app-user-list>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
