--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,4 +36,35 @@ $project-management-app-theme: mat.define-light-theme((
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+a,
+a:visited {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+._container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  box-sizing: content-box;
+}
+
+.no-select{
+  cursor: pointer;
+  user-select: none;
+}
+
+.footer{
+  position: fixed;
+  bottom: 0;
+}
