feat: fix sign in

--- a/src/app/auth/components/sign-in/sign-in.component.html
+++ b/src/app/auth/components/sign-in/sign-in.component.html
@@ -1,14 +1,25 @@
 <section class="_container">
-  <h2>Вход</h2>
-  <form (ngSubmit)="onSubmit()">
+  <h2>Sign in</h2>
+  <form [formGroup]="formData" (ngSubmit)="onSubmit()">
     <div>
-      <label for="login">Логин:</label>
-      <input type="text" name="login" [(ngModel)]="formData.login" required>
+      <mat-form-field>
+        <mat-label>Login</mat-label>
+        <input matInput formControlName="login" type="login" id="typeLoginX">
+      </mat-form-field>
     </div>
     <div>
-      <label for="password">Пароль:</label>
-      <input type="password" name="password" [(ngModel)]="formData.password" required>
+      <mat-form-field>
+        <mat-label>Enter your password</mat-label>
+        <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" id="typePasswordX">
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+      </mat-form-field>
     </div>
-    <button type="submit">Войти</button>
+    <button type="submit" mat-raised-button color="primary">
+      <mat-icon style="margin-right: 5px">login</mat-icon>Sign in
+    </button>
+    <p>Don't have an account? <a routerLink="../signup">Sign Up</a></p>
   </form>
 </section>
