--- a/src/app/auth/components/sign-up/sign-up.component.html
+++ b/src/app/auth/components/sign-up/sign-up.component.html
@@ -1,18 +1,30 @@
 <section class="_container">
-  <h2>Регистрация пользователя</h2>
-  <form (ngSubmit)="onSubmit()">
+  <h2>Sign up</h2>
+  <form [formGroup]="formData" (ngSubmit)="onSubmit()">
     <div>
-      <label for="name">Имя:</label>
-      <input type="text" name="name" [(ngModel)]="formData.name" required>
+      <mat-form-field>
+        <mat-label>Name</mat-label>
+        <input matInput formControlName="name" type="name" id="typeNameX">
+      </mat-form-field>
     </div>
     <div>
-      <label for="login">Логин:</label>
-      <input type="text" name="login" [(ngModel)]="formData.login" required>
+      <mat-form-field>
+        <mat-label>Login</mat-label>
+        <input matInput formControlName="login" type="login" id="typeLoginX">
+      </mat-form-field>
     </div>
     <div>
-      <label for="password">Пароль:</label>
-      <input type="password" name="password" [(ngModel)]="formData.password" required>
+      <mat-form-field>
+        <mat-label>Enter your password</mat-label>
+        <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" id="typePasswordX">
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hide" type="button">
+          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+      </mat-form-field>
     </div>
-    <button type="submit">Зарегистрироваться</button>
+    <button [disabled]="!formData.valid" type="submit" mat-raised-button color="primary">
+      <mat-icon style="margin-right: 5px">person</mat-icon>Sign up
+    </button>
   </form>
 </section>
