feat: add guards, logout, edit profile

--- a/src/app/auth/components/sign-in/sign-in.component.html
+++ b/src/app/auth/components/sign-in/sign-in.component.html
@@ -20,6 +20,6 @@
     <button [disabled]="!formData.valid" type="submit" mat-raised-button color="primary">
       <mat-icon style="margin-right: 5px">login</mat-icon>Sign in
     </button>
-    <p>Don't have an account? <a routerLink="../signup">Sign Up</a></p>
+    <p>Don't have an account? <a routerLinkActive="active" routerLink="signup">Sign Up</a></p>
   </form>
 </section>
