feat: add focus.directive

--- a/src/app/auth/components/sign-in/sign-in.component.html
+++ b/src/app/auth/components/sign-in/sign-in.component.html
@@ -4,7 +4,7 @@
     <div>
       <mat-form-field>
         <mat-label>Login</mat-label>
-        <input matInput formControlName="login" type="login" id="typeLoginX">
+        <input matInput formControlName="login" type="login" id="typeLoginX" appFocus>
       </mat-form-field>
     </div>
     <div>
