--- a/src/app/auth/components/sign-up/sign-up.component.html
+++ b/src/app/auth/components/sign-up/sign-up.component.html
@@ -4,7 +4,7 @@
     <div>
       <mat-form-field>
         <mat-label>Name</mat-label>
-        <input matInput formControlName="name" type="name" id="typeNameX">
+        <input matInput formControlName="name" type="name" id="typeNameX" appFocus>
       </mat-form-field>
     </div>
     <div>
