--- a/src/app/boards/components/boards-list/boards-list.component.html
+++ b/src/app/boards/components/boards-list/boards-list.component.html
@@ -1,1 +1,9 @@
-<p>boards-list works!</p>
+<section class="_container">
+  <mat-form-field>
+    <mat-label>Enter board name to search</mat-label>
+    <input matInput>
+  </mat-form-field>
+  <button mat-fab color="primary" aria-label="Example icon button with a delete icon" title="create new board">
+    <mat-icon>add</mat-icon>
+  </button>
+</section>
