feat: add create board

--- a/src/app/boards/components/boards-list/boards-list.component.html
+++ b/src/app/boards/components/boards-list/boards-list.component.html
@@ -3,7 +3,7 @@
     <mat-label>Enter board name to search</mat-label>
     <input matInput>
   </mat-form-field>
-  <button mat-fab color="primary" aria-label="Example icon button with a delete icon" title="create new board">
+  <button routerLink="add-board" mat-fab color="primary" aria-label="Example icon button with a delete icon" title="create new board">
     <mat-icon>add</mat-icon>
   </button>
 </section>
