--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -18,3 +18,4 @@
     </div>
   </header>
 </mat-toolbar>
+<mat-progress-bar mode="determinate" value="40" color="warn" *ngIf="isLoading | async"></mat-progress-bar>
