--- a/src/app/boards/components/add-board/add-board.component.html
+++ b/src/app/boards/components/add-board/add-board.component.html
@@ -16,7 +16,7 @@
       </mat-select>
     </mat-form-field>
     <div class="button">
-      <button type="submit" mat-raised-button color="primary">
+      <button [disabled]="!boardsData.valid" type="submit" mat-raised-button color="primary">
         <mat-icon style="margin-right: 5px">create</mat-icon>Create
       </button>
       <button type="button" mat-raised-button color="primary" routerLink="../">
