--- a/src/app/boards/components/boards-list/boards-list.component.html
+++ b/src/app/boards/components/boards-list/boards-list.component.html
@@ -18,7 +18,7 @@
         <p>Owner: {{ board.owner }}</p>
         <p>Users: {{ board.users.join(', ') }}</p>
       </mat-card-content>
-      <button routerLink="edit-board" mat-mini-fab color="primary" aria-label="Example icon button with a delete icon"
+      <button (click)="editBoard(board)" mat-mini-fab color="primary" aria-label="Example icon button with a delete icon"
         title="edit board" class="btn edit-btn">
         <mat-icon>edit</mat-icon>
       </button>
