feat: add drag and drop, edit, delete profile

--- a/src/app/boards/components/board-item/add-task/add-task.component.html
+++ b/src/app/boards/components/board-item/add-task/add-task.component.html
@@ -7,7 +7,7 @@
   </mat-form-field>
 
   <mat-form-field>
-    <mat-label>descroption</mat-label>
+    <mat-label>description</mat-label>
     <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1"
       cdkAutosizeMaxRows="10" formControlName="description" type="description" id="typeDescriptionX"></textarea>
   </mat-form-field>
