--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -7,8 +7,8 @@
       <mat-icon style="margin-right: 5px">login</mat-icon>Sign in
     </button>
   </div>
-  <img src="../../assets/img/project management system.png" alt="project management system">
-  <img src="../../assets/img/app opportunities.png" alt="app opportunities">
+  <img src="assets/img/project management system.png" alt="project management system">
+  <img src="assets/img/app opportunities.png" alt="app opportunities">
   <div class="app-opportunities">
     <h3>App opportunities</h3>
     <ul>
@@ -24,7 +24,7 @@
     <h3>About devoloper</h3>
     <p><span>Stanislav Goloborodov</span> student of the course "UpSkill Me" from The Rolling Scopes community.</p>
   </div>
-  <img src="../../assets/img/about developer.png" alt="about developer">
+  <img src="assets/img/about developer.png" alt="about developer">
   <div class="about-course">
     <h3>About course</h3>
     <p>This tutorial project was developed as part of the free online course "UpSkill Me" from The Rolling Scopes community.</p>
