--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -3,7 +3,7 @@
       <a href="https://github.com/Stanislavstranger" target="_blank" class="my-github">My GitHub</a>
       <span class="year">2023</span>
       <a href="https://rs.school/js/" target="_blank" class="link-rs-school _ibg">
-          <img src="../../../../assets/img/logo-rsschool.png" alt="rs-school-logo">
+          <img src="assets/img/logo-rsschool.png" alt="rs-school-logo">
       </a>
   </footer>
 </mat-toolbar>
